# project_template

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindKernelHeader.cmake  FindRocksDB.cmake
script/: cleanup.sh  recompile.sh  setup.sh
src/: CMakeLists.txt
src/app/: 1_main.cc  3_main.cc  CMakeLists.txt  main.cc
src/kernel/: CMakeLists.txt  hello.c
